--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,13 @@ certifi==2019.3.9
 chardet==3.0.4
 defusedxml==0.6.0rc1
 Django==2.2
+django-nested-admin==3.2.3
 idna==2.8
 oauthlib==3.0.1
 Pillow==6.0.0
 pkg-resources==0.0.0
 PyJWT==1.7.1
+python-monkey-business==1.0.0
 python3-openid==3.1.0
 pytz==2018.9
 requests==2.21.0
