--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
 certifi==2019.3.9
 chardet==3.0.4
 defusedxml==0.6.0rc1
-Django==2.2
+Django==2.2.4
 django-cors-headers==3.0.2
 django-nested-admin==3.2.3
 djangorestframework==3.9.4
 idna==2.8
 oauthlib==3.0.1
 Pillow==6.0.0
+pkg-resources==0.0.0
 psycopg2==2.8.3
 PyJWT==1.7.1
 python-monkey-business==1.0.0
